add new lang entries.

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,6 +1,15 @@
 {
+    "@@locale": "de",
     "helloWorld": "Hallo Welt!",
     "@helloWorld": {
-        "description": "The conventional newborn programmer greeting"
+        "description": ""
+    },
+    "sign_in": "Anmelden",
+    "@sign_in": {
+        "description": ""
+    },
+    "register": "Registrierung",
+    "@register": {
+        "description": ""
     }
 }
