--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -1,6 +1,15 @@
 {
+    "@@locale": "tr",
     "helloWorld": "Merhaba Dünya!",
     "@helloWorld": {
-        "description": "The conventional newborn programmer greeting"
+        "description": ""
+    },
+    "sign_in": "Giriş Yap",
+    "@sign_in": {
+        "description": ""
+    },
+    "register": "Kayıt Ol",
+    "@register": {
+        "description": ""
     }
 }
