--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -11,5 +11,25 @@
     "register": "Kayıt Ol",
     "@register": {
         "description": ""
+    },
+    "next": "İleri",
+    "@next": {
+        "description": ""
+    },
+    "username": "Kullanıcı Adı",
+    "@username": {
+        "description": ""
+    },
+    "password": "Şifre",
+    "@password": {
+        "description": ""
+    },
+    "repeat_password": "Şifre Tekrar",
+    "@repeat_password": {
+        "description": ""
+    },
+    "email": "Email",
+    "@email": {
+        "description": ""
     }
 }
