add new translations

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -31,5 +31,13 @@
     "email": "Email",
     "@email": {
         "description": ""
+    },
+    "profile_picture": "Profilbild",
+    "@profile_picture": {
+        "description": ""
+    },
+    "required_field": "*Erforderlich",
+    "@required_field": {
+        "description": ""
     }
 }
