--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -31,5 +31,13 @@
     "email": "Email",
     "@email": {
         "description": ""
+    },
+    "profile_picture": "Profile picture",
+    "@profile_picture": {
+        "description": ""
+    },
+    "required_field": "*Required",
+    "@required_field": {
+        "description": ""
     }
 }
