--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -31,5 +31,13 @@
     "email": "Email",
     "@email": {
         "description": ""
+    },
+    "profile_picture": "Kullanıcı resmi",
+    "@profile_picture": {
+        "description": ""
+    },
+    "required_field": "*Zorunlu Alan",
+    "@required_field": {
+        "description": ""
     }
 }
