--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -39,5 +39,53 @@
     "required_field": "*Erforderlich",
     "@required_field": {
         "description": ""
+    },
+    "username_empty": "Benutzername darf nicht null sein.",
+    "@username_empty": {
+        "description": ""
+    },
+    "username_invalid_length": "Die Länge muss zwischen 5-15 liegen.",
+    "@username_invalid_length": {
+        "description": ""
+    },
+    "password_empty": "Das Passwort darf nicht null sein.",
+    "@password_empty": {
+        "description": ""
+    },
+    "password_invalid_length": "Die Passwortlänge muss zwischen 7 und 20 liegen.",
+    "@password_invalid_length": {
+        "description": ""
+    },
+    "password_buffer_prefix": "Das Passwort muss mindestens",
+    "@password_buffer_prefix": {
+        "description": ""
+    },
+    "password_contains_uppercase": "\neinen Großbuchstaben enthalten.",
+    "@password_contains_uppercase": {
+        "description": ""
+    },
+    "password_contains_lowercase": "\neinen Kleinbuchstaben enthalten.",
+    "@password_contains_lowercase": {
+        "description": ""
+    },
+    "password_contains_digit": "\neine Ziffer enthalten.",
+    "@password_contains_digit": {
+        "description": ""
+    },
+    "password_contains_special_character": "\nein Sonderzeichen enthalten.",
+    "@password_contains_special_character": {
+        "description": ""
+    },
+    "password_not_match": "Passwort stimmt nicht überein.",
+    "@password_not_match": {
+        "description": ""
+    },
+    "email_empty": "E-Mail kann nicht null sein.",
+    "@email_empty": {
+        "description": ""
+    },
+    "email_invalid": "Ungültige E-Mail-Adresse.",
+    "@email_invalid": {
+        "description": ""
     }
 }
