--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -1,11 +1,19 @@
 {
     "@@locale": "tr",
-    "helloWorld": "Merhaba Dünya!",
-    "@helloWorld": {
+    "appTitle": "Hoş geldiniz",
+    "@appTitle": {
         "description": ""
     },
     "sign_in": "Giriş Yap",
     "@sign_in": {
+        "description": ""
+    },
+    "users": "Kullanıcılar",
+    "@users": {
+        "description": ""
+    },
+    "about": "Hakkında",
+    "@about": {
         "description": ""
     },
     "register": "Kayıt Ol",
