--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,12 +1,20 @@
 {
     "@@locale": "en",
-    "helloWorld": "Hello World!",
-    "@helloWorld": {
+    "appTitle": "Wellcome",
+    "@appTitle": {
         "description": ""
     },
     "sign_in": "Sign In",
     "@sign_in": {
         "description": "Sign In button text"
+    },
+    "users": "Users",
+    "@users": {
+        "description": ""
+    },
+    "about": "About",
+    "@about": {
+        "description": ""
     },
     "register": "Register",
     "@register": {
