--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,111 +1,32 @@
 {
     "@@locale": "de",
     "appTitle": "Willkommen",
-    "@appTitle": {
-        "description": ""
-    },
     "sign_in": "Anmelden",
-    "@sign_in": {
-        "description": ""
-    },
+    "settings": "Einstellungen",
     "users": "Benutzer",
-    "@users": {
-        "description": ""
-    },
     "about": "Über",
-    "@about": {
-        "description": ""
-    },
+    "select_user": "User Auswählen",
     "register": "Registrierung",
-    "@register": {
-        "description": ""
-    },
     "next": "Weiter",
-    "@next": {
-        "description": ""
-    },
     "username": "Benutzername",
-    "@username": {
-        "description": ""
-    },
     "password": "Passwort",
-    "@password": {
-        "description": ""
-    },
     "repeat_password": "Passwort wiederholen",
-    "@repeat_password": {
-        "description": ""
-    },
     "email": "Email",
-    "@email": {
-        "description": ""
-    },
     "upload_photo": "Foto hochladen",
-    "@upload_photo": {
-        "description": ""
-    },
     "profile_picture": "Profilbild",
-    "@profile_picture": {
-        "description": ""
-    },
     "take_picture": "Mach ein Foto",
-    "@take_picture": {
-        "description": ""
-    },
     "finish": "Fertig",
-    "@finish": {
-        "description": ""
-    },
     "required_field": "*Erforderlich",
-    "@required_field": {
-        "description": ""
-    },
     "username_empty": "Benutzername darf nicht null sein.",
-    "@username_empty": {
-        "description": ""
-    },
     "username_invalid_length": "Die Länge muss zwischen 5-15 liegen.",
-    "@username_invalid_length": {
-        "description": ""
-    },
     "password_empty": "Das Passwort darf nicht null sein.",
-    "@password_empty": {
-        "description": ""
-    },
     "password_invalid_length": "Die Passwortlänge muss zwischen 7 und 20 liegen.",
-    "@password_invalid_length": {
-        "description": ""
-    },
     "password_buffer_prefix": "Das Passwort muss mindestens",
-    "@password_buffer_prefix": {
-        "description": ""
-    },
     "password_contains_uppercase": "\neinen Großbuchstaben enthalten.",
-    "@password_contains_uppercase": {
-        "description": ""
-    },
     "password_contains_lowercase": "\neinen Kleinbuchstaben enthalten.",
-    "@password_contains_lowercase": {
-        "description": ""
-    },
     "password_contains_digit": "\neine Ziffer enthalten.",
-    "@password_contains_digit": {
-        "description": ""
-    },
     "password_contains_special_character": "\nein Sonderzeichen enthalten.",
-    "@password_contains_special_character": {
-        "description": ""
-    },
     "password_not_match": "Passwort stimmt nicht überein.",
-    "@password_not_match": {
-        "description": ""
-    },
     "email_empty": "E-Mail kann nicht null sein.",
-    "@email_empty": {
-        "description": ""
-    },
-    "email_invalid": "Ungültige E-Mail-Adresse.",
-    "@email_invalid": {
-        "description": ""
-    }
+    "email_invalid": "Ungültige E-Mail-Adresse."
 }
