add sliding up panel in game screen

--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -135,5 +135,13 @@
     "guess_error_same_digit": "Doppelte Ziffern sind nicht zulässig",
     "@guess_error_same_digit": {
         "description": ""
+    },
+    "hint": "Hinweis",
+    "@hint": {
+        "description": ""
+    },
+    "quit": "Verlassen",
+    "@quit": {
+        "description": ""
     }
 }
